bridge/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: personnalwebsite
    labels:
        com.docker.compose.project: personnalwebsite
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: personnalwebsite
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: personnalwebsite
                com.docker.compose.service: app
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: app
                  image: personnalwebsite-app
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: app-3000
                      containerPort: 3000
                  volumeMounts:
                    - name: app-node-modules
                      mountPath: /app/node_modules
            volumes:
                - name: app-node-modules
                  persistentVolumeClaim:
                    claimName: app-node-modules
