bridge/base/adminer-service.yaml
# check if there is at least one published port

#! adminer-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: adminer-published
    namespace: personnalwebsite
    labels:
        com.docker.compose.project: personnalwebsite
        com.docker.compose.service: adminer
spec:
    selector:
        com.docker.compose.project: personnalwebsite
        com.docker.compose.service: adminer
    ports:
        - name: adminer-8080
          port: 8080
          protocol: TCP
          targetPort: adminer-8080

# check if there is at least one published port
