bridge/base/app-expose.yaml
#! app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: personnalwebsite
    labels:
        com.docker.compose.project: personnalwebsite
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: personnalwebsite
        com.docker.compose.service: app
    ports:
        - name: app-3000
          port: 3000
          targetPort: app-3000
